<resources>
    <string name="app_name">CheapStays</string>
    <string name="title_activity_user">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_sign_in">Sign In with Phone</string>
    <string name="new_user">New User? Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_sign_up">Sign Up with Phone</string>
    <string name="existing_user">Existing User? Sign In</string>
    <string name="user_select">Select User</string>
    <string name="choose_account">Choose your desired user account</string>
    <string name="emp">Employee</string>
    <string name="customer">Customer</string>
    <string name="bookings">All Bookings</string>
    <string name="hotel">Hotel:</string>
    <string name="user">User: </string>
    <string name="date">Date:</string>
    <string name="add_hotel">Add Hotel</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="address">Address</string>
    <string name="rating">Rating of Hotel</string>
    <string name="disc">Discount (If Any)</string>
    <string name="select_pic">Select Picture</string>
    <string name="add">Add</string>
    <string name="add_room">Add Room</string>
    <string name="no_of_rooms">No. of Rooms:</string>
    <string name="room_type">Room Type:</string>
    <string name="price">Price</string>
    <string name="ret">Return</string>
    <string name="cheap_stays_admin">    Cheap Stays Administrator</string>
    <string name="list_hotel">List Hotel</string>
    <string name="mod_hotel">Modify Hotels</string>
    <string name="logout">Logout</string>
    <string name="hotel_govardhan">Hotel Goverdhan Palace To The End</string>
    <string name="check_in">Check In 12:00 pm-></string>
    <string name="disp_date">12/01/2021</string>
    <string name="disp_rooms">3 Single Rooms</string>
    <string name="amount">Booking Amount :</string>
    <string name="disp_amount">1500</string>
    <string name="title_name_booking">CheapStays Bookings</string>
    <string name="welcome">Welcome to CheapStays </string>
    <string name="hotel_go">Hotel Goverdhan Palace</string>
    <string name="disp_rating">4.80</string>
    <string name="disp_price">₹7000</string>
    <string name="desc">Description</string>
    <string name="change_disc">Change Discount</string>
    <string name="confirm">Confirm changes</string>
    <string name="mod_rooms">Modify Rooms</string>
    <string name="del_hotel">Delete Hotel</string>
    <string name="mod_room">Modify Room</string>
    <string name="sel_room_type">Select Room Type:</string>
    <string name="tariff">Tariff</string>
    <string name="confirm_tariff">confirm tariff change</string>
    <string name="no_of_rooms_2">No Of Rooms:</string>
    <string name="rooms">Rooms</string>
    <string name="add_rooms">Add Rooms</string>
    <string name="update_rooms">Update Number Of Rooms</string>
    <string name="settings">Settings</string>
    <string name="user_name">Name:</string>
    <string name="user_email">Email:</string>
    <string name="user_phone">Phone:</string>
    <string name="confirm_change">Confirm Changes</string>
    <string name="desc_2">Description:</string>
    <string name="offer">Special Offer:</string>
    <string name="book_rooms">Book Rooms</string>
    <string name="room_type_2">Room Type</string>
    <string name="no_of_rooms_3">No. of Rooms</string>
    <string name="book">Book</string>
    <string name="select_date">Select Date</string>
    <string name="single_rooms">Single Rooms</string>
    <string name="double_rooms">Double Rooms</string>
    <string name="restart_app">Restart App</string>
    <string name="exit">Exit</string>
    <string name="single_rooms_3">3 Single Rooms</string>
    <string name="booking_amount">Booking Amount :</string>
    <string name="modify_hotel">Modify Hotel</string>
    <string name="view_report">View Bookings Report For the hotel</string>
    <string name="special_offer">Special Offer:</string>
    <string name="no_internet">No Internet Available</string>
    <string name="max">Max Rooms</string>
    <string name="booked_rooms">Booked Rooms</string>
    <string name="show_guest_list">Show Guest List</string>
    <string name="all_bookings">All Bookings</string>
    <string name="userAccount">Choose your desired user account</string>
</resources>